# bookie

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: sample_game.json
data/live/: README.md
docs/: ARCHITECTURE.md  BACKTESTING.md  CANONICAL_SCHEMA.md  CONCEPT.md  DATA_PIPELINE.md  HISTORICAL_REPLAY.md  KALSHI_LIVE_DATA.md  LINUX_PLUG_AND_PLAY.md  LIVE_TRAINING.md  LOCAL_BRAIN.md  RESEARCH_WARNINGS.md  SECRETS.md  SIMULATION.md  STRATEGIES.md  STRATEGY_LEADERBOARD.md  TENNIS_ARCHITECTURE.md  TENNIS_LIVE_DATA.md  TENNIS_LIVE_PAIRING.md  TENNIS_SCORE_PROVIDERS.md  TENNIS_STRATEGIES.md
scripts/: run_replay.sh
src/: __init__.py
tests/: test_analytics.py  test_backtest_batch.py  test_backtest_cli.py  test_backtest_leaderboard.py  test_backtest_robustness.py  test_backtest_runner.py  test_backtest_significance.py  test_backtest_splits.py  test_data_alignment.py  test_data_cli.py  test_data_normalization.py  test_data_schemas.py  test_data_validation.py  test_engine.py  test_fill_engine.py  test_kalshi_auth.py  test_latency.py  test_live_cli.py  test_live_env.py  test_live_recorder.py  test_live_to_bundle.py  test_market_regimes.py  test_orderbook.py  test_orderbook_mapper.py  test_queue_model.py  test_replay.py  test_replay_bundle.py  test_replay_stress.py  test_risk.py  test_slippage.py  test_strategies.py  test_tennis_bundle_conversion.py  test_tennis_espn_provider.py  test_tennis_fair_value.py  test_tennis_features.py  test_tennis_live_cli.py  test_tennis_live_recorder.py  test_tennis_pairing.py  test_tennis_provider.py  test_tennis_regimes.py  (+4 more)
(+122 files in other folders)
