[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookie"
version = "0.1.0"
description = "Modular sports prediction-market trading engine (mock/replay only)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
live = ["requests>=2.28", "websockets>=12.0", "cryptography>=42.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
